--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>國小排課系統 V48.1 (Fixed)</title>
+    <title>國小排課系統 V47.1 (科任手動優先版)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
@@ -66,7 +66,7 @@
         <div class="bg-gray-800 text-white p-3 sticky top-0 z-50 shadow no-print">
             <div class="flex flex-wrap justify-between items-center max-w-[1800px] mx-auto gap-2">
                 <div class="flex items-center gap-4">
-                    <h1 class="text-xl font-bold text-yellow-400">🏫 排課 V48.1</h1>
+                    <h1 class="text-xl font-bold text-yellow-400">🏫 排課 V47.1</h1>
                     <nav class="flex bg-gray-700 rounded p-1 gap-1 flex-wrap">
                         <button v-for="tab in tabs" :key="tab.id" @click="currentTab=tab.id" :class="currentTab===tab.id ? 'bg-yellow-500 text-black font-bold' : 'text-gray-300 hover:bg-gray-600'" class="px-3 py-1 rounded text-sm transition">{{ tab.name }}</button>
                     </nav>
@@ -77,4 +77,4 @@
 
         <div class="p-4 max-w-[1800px] mx-auto">
             <div v-show="currentTab === 'settings'" class="space-y-4 no-print">
-                <div class="bg-white p-4 rounded shadow border-l-4 border-purple-500 overflow-x-auto"><h3 class="font-bold text-lg mb-2 text-purple-900">📊 01. 節數設定矩陣</h3><div class="max-h-[60vh] overflow-auto"><table class="w-full text-sm border-collapse matrix-table"><thead><tr><th class="z-20 left-0 bg-gray-200">年級 \ 科目</th><th v-for="(sub, idx) in subjects" :key="idx" class="min-w-[60px]"><div class="flex flex-col items-center"><span class="font-bold" :class="getSubjectColor(sub.zh)">{{sub.zh}}</span><span class="text-[9px] text-gray-500 bg-gray-100 px-1 rounded">{{sub.alias}}</span></div></th><th class="min-w-[50px] bg-gray-800 text-white sticky right-0 z-20">總計</th></tr></thead><tbody><tr v-for="g in 6" :key="g"><td class="font-bold bg-gray-50 sticky left-0 z-10">{{ g }} 年級</td><td v-for="sub in subjects" :key="sub.zh"><input typ
+                <div class="bg-white p-4 rounded shadow border-l-4 border-purple-500 overflow-x-auto"><h3 class="font-bold text-lg mb-2 text-purple-900">📊 01. 節數設定矩陣</h3><div class="max-h-[60vh] overflow-auto"><table class="w-full text-sm border-collapse matrix-table"><thead><tr><th class="z-20 left-0 bg-gray-200">年級 \ 科目</th><th v-for="(sub, idx) in subjects" :key="idx" class="min-w-[60px]"><div class="flex flex-col items-center"><span class="font-bold" :class="getSubjectColor(sub.zh)">{{sub.zh}}</span><span class="text-[9px] text-gray-500 bg-gray-100 px-1 rounded">{{sub.alias}}</span></div></th><th class="min-w-[50px] bg-gray-800 text-white sticky right-0 z-20">總計</th></tr></thead><tbody><tr v-for="g in 6" :key="g"><td class="font-bold bg-gray-50 sticky left-0 z-10">{{ g }} 年級</td><td v-for="sub in subjects" :key="sub.zh"><input t
